Fixed graph window being flat and touch selecting on IOS

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 * {
     touch-action: none;
+    user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .main {
@@ -23,7 +26,6 @@ body {
     background-color: #111;
     overflow: hidden;
     font-family: sans-serif;
-    user-select: none;
 }
 
 #graph_window {
@@ -33,6 +35,7 @@ body {
     background-color: #333;
     overflow: hidden;
     position: relative;
+    min-height: 40vh;
 }
 
 #right_side {
